--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,11 +3,10 @@ enable_testing()
 # GTest
 find_package(GTest REQUIRED)
 
-add_executable(monitor testMain.cc testIoStat.cc testIoMap.cc
-                       testIoAggregateMap.cc)
+add_executable(lib main_pool.cpp testMain.cc)
 
-target_link_libraries(monitor io_monitor GTest::gtest GTest::gtest_main pthread)
+# target_link_libraries(lib libftpp GTest::gtest GTest::gtest_main pthread)
 
-add_test(NAME IoMonitorTests COMMAND io_monitor_tests)
+add_test(NAME LibftppTests COMMAND libftpp_tests)
 
 include(FetchContent)
