--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,23 +10,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-set(gtest_force_shared_crt
-    ON
-    CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GCC")
   add_compile_options(-Wall -Wextra -Werror)
 endif()
 
-add_compile_options(-fsanitize=address -g3)
-add_link_options(-fsanitize=address)
+add_executable(lib tests/testMain.cc tests/main_pool.cpp)
+target_include_directories(lib PRIVATE include)
 
-include_directories(include)
-add_subdirectory(src)
-add_subdirectory(tests)
+# add_compile_options(-fsanitize=address) add_link_options(-fsanitize=address
+# -g3)
