--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,12 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GCC")
   add_compile_options(-Wall -Wextra -Werror)
 endif()
 
-set(SOURCES tests/testMain.cc tests/main_pool.cpp tests/main_data_buffer.cpp)
+set(SOURCES tests/testMain.cc tests/main_pool.cpp tests/main_data_buffer.cpp
+            tests/main_memento.cpp)
 
 set(SOURCES ${SOURCES} data_structures/data_buffer/data_buffer.cc)
+
+set(SOURCES ${SOURCES} design_patterns/memento/memento.cc)
 
 add_executable(libftpp ${SOURCES})
 
