--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,13 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GCC")
 endif()
 
 set(SOURCES
-    tests/testMain.cc tests/main_pool.cpp tests/main_data_buffer.cpp
-    tests/main_memento.cpp tests/main_observer.cpp tests/main_singleton.cpp)
+    tests/testMain.cc
+    tests/main_pool.cpp
+    tests/main_data_buffer.cpp
+    tests/main_memento.cpp
+    tests/main_observer.cpp
+    tests/main_singleton.cpp
+    tests/main_state_machine.cpp)
 
 set(SOURCES ${SOURCES} data_structures/data_buffer/data_buffer.cc)
 
