--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,5 +63,5 @@ target_include_directories(libftpp PRIVATE data_structures)
 target_include_directories(libftpp PRIVATE iostream)
 target_include_directories(libftpp PRIVATE mathematics)
 target_include_directories(libftpp PRIVATE networks)
-target_include_directories(libftpp PRIVATE thread)
+target_include_directories(libftpp PRIVATE threading)
 target_include_directories(libftpp PRIVATE design_patterns)
