--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ elseif(APPLE AND CMAKE_BUILD_TYPE MATCHES "ASan")
     -fsanitize-address-use-after-scope)
   message(WARNING "Compiling for Macos with ASan options")
 elseif(APPLE AND CMAKE_BUILD_TYPE MATCHES "TSan")
-  add_link_options(-g -O0 -fsanitize=thread -fno-omit-frame-pointer)
+  add_link_options(-g -O0 -fsanitize=thread -fno-omit-frame-pointer -lpthread)
   message(WARNING "Compiling for Macos with TSan options")
 elseif(APPLE AND CMAKE_BUILD_TYPE MATCHES "Debug")
   add_link_options(-g -O0)
