--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,8 @@ set(SOURCES
     tests/main_thread_safe_iostream.cpp
     tests/main_thread_safe_queue.cpp
     tests/main_thread.cpp
-    tests/main_worker_pool.cpp)
+    tests/main_worker_pool.cpp
+    tests/main_persistent_worker.cpp)
 
 set(SOURCES ${SOURCES} data_structures/data_buffer/data_buffer.cc)
 
@@ -61,8 +62,9 @@ set(SOURCES ${SOURCES} design_patterns/memento/memento.cc)
 
 set(SOURCES ${SOURCES} iostream/thread_safe_iostream.cc)
 
-set(SOURCES ${SOURCES} threading/thread/thread.cc
-            threading/worker_pool/worker_pool.cc)
+set(SOURCES
+    ${SOURCES} threading/thread/thread.cc threading/worker_pool/worker_pool.cc
+    threading/persistent_worker/persistent_worker.cc)
 
 add_executable(libftpp ${SOURCES})
 
